add seasons tags

--- a/index.html
+++ b/index.html
@@ -93,7 +93,31 @@
         <a class="video__btn" data-fancybox href="https://www.youtube.com/watch?v=1YVxm0GKhkM">
             Посмотреть трейлер сериала</a>
     </div>
-
+</section>
+<section class="seasons section-page">
+    <div class="container">
+        <h3 class="title">Все сезоны</h3>
+        <ol class="seasons__inner">
+            <li class="seasons__item">
+                <a href="#" class="seasons_link">Смотреть</a>
+            </li>
+            <li class="seasons__item">
+                <a href="#" class="seasons_link">Смотреть</a>
+            </li>
+            <li class="seasons__item">
+                <a href="#" class="seasons_link">Смотреть</a>
+            </li>
+            <li class="seasons__item">
+                <a href="#" class="seasons_link">Смотреть</a>
+            </li>
+            <li class="seasons__item">
+                <a href="#" class="seasons_link">Смотреть</a>
+            </li>
+            <li class="seasons__item">
+                <a href="#" class="seasons_link">Смотреть</a>
+            </li>
+        </ol>
+    </div>
 </section>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
