--- a/index.html
+++ b/index.html
@@ -98,23 +98,23 @@
     <div class="container">
         <h3 class="title">Все сезоны</h3>
         <ol class="seasons__inner">
-            <li class="seasons__item">
-                <a href="#" class="seasons_link">Смотреть</a>
+            <li class="seasons__item" style="background-image: url('images/seasons-image-1.jpg');">
+                <a href="#" class="seasons__link">Смотреть</a>
             </li>
-            <li class="seasons__item">
-                <a href="#" class="seasons_link">Смотреть</a>
+            <li class="seasons__item" style="background-image: url('images/seasons-image-2.jpg');">
+                <a href="#" class="seasons__link">Смотреть</a>
             </li>
-            <li class="seasons__item">
-                <a href="#" class="seasons_link">Смотреть</a>
+            <li class="seasons__item" style="background-image: url('images/seasons-image-3.jpg');">
+                <a href="#" class="seasons__link">Смотреть</a>
             </li>
-            <li class="seasons__item">
-                <a href="#" class="seasons_link">Смотреть</a>
+            <li class="seasons__item" style="background-image: url('images/seasons-image-4.jpg');">
+                <a href="#" class="seasons__link">Смотреть</a>
             </li>
-            <li class="seasons__item">
-                <a href="#" class="seasons_link">Смотреть</a>
+            <li class="seasons__item" style="background-image: url('images/seasons-image-5.jpg');">
+                <a href="#" class="seasons__link">Смотреть</a>
             </li>
-            <li class="seasons__item">
-                <a href="#" class="seasons_link">Смотреть</a>
+            <li class="seasons__item" style="background-image: url('images/seasons-image-6.jpg');">
+                <a href="#" class="seasons__link">Смотреть</a>
             </li>
         </ol>
     </div>
