--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -119,6 +119,73 @@
         </ol>
     </div>
 </section>
+<section class="heroes section-page">
+    <div class="container">
+        <h3>Главные герои</h3>
+        <div class="heroes__inner">
+            <div class="heroes__slider-img">
+                <img class="heroes__images" src="images/hero-1.jpg" alt="">
+                <img class="heroes__images" src="images/hero-1.jpg" alt="">
+                <img class="heroes__images" src="images/hero-1.jpg" alt="">
+            </div>
+            <div class="heroes__slider-text">
+                <div class="heroes__text">
+                    <h4 class="heroes__name">
+                        Рагнар-1
+                    </h4>
+                    <p>
+                        Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода
+                        Инглингов, ключевой персонаж сериала.
+                    </p>
+                    <p>
+                        Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга.
+                        Рассекая море в поисках боевой славы и наживы, он стремится обрести новые знания, открыть
+                        неизвестные земли и изменить нелегкую судьбу своего народа, живущего в суровых условиях
+                        Скандинавского полуострова
+                    </p>
+                </div>
+                <div class="heroes__text">
+                    <h4 class="heroes__name">
+                        Рагнар-2
+                    </h4>
+                    <p>
+                        Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода
+                        Инглингов, ключевой персонаж сериала.
+                    </p>
+                    <p>
+                        Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга.
+                        Рассекая море в поисках боевой славы и наживы, он стремится обрести новые знания, открыть
+                        неизвестные земли и изменить нелегкую судьбу своего народа, живущего в суровых условиях
+                        Скандинавского полуострова
+                    </p>
+                </div>
+                <div class="heroes__text">
+                    <h4 class="heroes__name">
+                        Рагнар-3
+                    </h4>
+                    <p>
+                        Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода
+                        Инглингов, ключевой персонаж сериала.
+                    </p>
+                    <p>
+                        Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга.
+                        Рассекая море в поисках боевой славы и наживы, он стремится обрести новые знания, открыть
+                        неизвестные земли и изменить нелегкую судьбу своего народа, живущего в суровых условиях
+                        Скандинавского полуострова
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
+<footer class="footer">
+    <p class="copy">
+        Сериал «Викинги». Правами на сериал владеет канал History.
+    </p>
+</footer>
+
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/slick.min.js"></script>
