--- a/season-1.html
+++ b/season-1.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="page-header">
-        <nav class="menu">
+<header class="page-header">
+    <nav class="menu">
         <ul class="menu__list">
             <li class="menu__list-item">
                 <a class="menu__list-link menu__list-link--active" href="#">1 сезон</a>
@@ -36,7 +36,55 @@
             </li>
         </ul>
     </nav>
-    </header>
+    <div class="season-info">
+        <div class="season-info__num">
+            01
+            <span>сезон</span>
+        </div>
+        <div class="season-info__text">
+            <p>
+                Сериал знакомит нас с жестоким и таинственным миром Рагнара Лодброка, воина-викинга и фермера, который
+                жаждет исследовать—и совершать набеги-далекие берега океана. Его честолюбие ставит его в противоречие с
+                местным вождем графом Харальдсоном, который настаивает на отправке своих рейдеров на бедный Восток, а не
+                на неизведанный Запад. Когда Рагнар объединяется со своим другом-кораблестроителем Флоки, чтобы создать
+                новое поколение бесстрашных кораблей, способных покорять бурные северные моря, сцена готова к конфликту.
+            </p>
+            <p>
+                Но несмотря на всю свою войну и кровопролитие, викинги также являются историей семьи и братства,
+                захватывая любовь и привязанность между Рагнаром и его женой Лагертой, свирепой воительницей. Это
+                история о брате Рагнара Ролло, яростном борце, который кипит от ревности; о жене графа Харальдсона
+                Зигги, послушной красавице, которая, возможно, не слишком верна; и о монахе Ательстане, чья христианская
+                мораль противоречит языческому обществу викингов. Когда амбиции и инновации потрясут цивилизацию, эти
+                персонажи будут подвергнуты испытанию—и их образ жизни никогда не будет прежним.
+            </p>
+        </div>
+    </div>
+</header>
+<section class="seasons section-page">
+    <div class="container">
+        <h3 class="title">Все серии 1 сезона</h3>
+        <ol class="seasons__inner">
+            <li class="seasons__item" style="background-image: url('images/seasons-image-1.jpg');">
+                <a href="#" class="seasons__link">Смотреть</a>
+            </li>
+            <li class="seasons__item" style="background-image: url('images/seasons-image-2.jpg');">
+                <a href="#" class="seasons__link">Смотреть</a>
+            </li>
+            <li class="seasons__item" style="background-image: url('images/seasons-image-3.jpg');">
+                <a href="#" class="seasons__link">Смотреть</a>
+            </li>
+            <li class="seasons__item" style="background-image: url('images/seasons-image-4.jpg');">
+                <a href="#" class="seasons__link">Смотреть</a>
+            </li>
+            <li class="seasons__item" style="background-image: url('images/seasons-image-5.jpg');">
+                <a href="#" class="seasons__link">Смотреть</a>
+            </li>
+            <li class="seasons__item" style="background-image: url('images/seasons-image-6.jpg');">
+                <a href="#" class="seasons__link">Смотреть</a>
+            </li>
+        </ol>
+    </div>
+</section>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
